--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.0.1",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
