--- a/client/angular.json
+++ b/client/angular.json
@@ -62,7 +62,9 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "client:build"
+            "browserTarget": "client:build",
+            "proxyConfig": "proxy.conf.json",
+            "ssl": false
           },
           "configurations": {
             "production": {
