--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,9 @@
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "jquery": "^3.6.0",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
